# AI-Brand-Consistency-Checker-Tester

./: .env  app_ui.py  brand_cli.py  color_analyzer.py  document_loader.py  local_jobs.db  main.py  pyproject.toml  requirements.txt  security_firewall.py  test_run.py
ai_brand_consistency_checker/: AGENT_GUIDE.md  CHANGELOG.md  IMPLEMENTATION_NOTES.md  README.md  acceptance.md  demo_script.md  openapi.yaml  orchestrator.py
ai_brand_consistency_checker/eval/: eval_run.py  golden_answers.json  rubric.md  run_eval.md
ai_brand_consistency_checker/examples/: report.example.md  request.example.json  response.example.json
ai_brand_consistency_checker/fixtures/: README.md
ai_brand_consistency_checker/fixtures/adversarial/: README.md
ai_brand_consistency_checker/fixtures/golden/: README.md
ai_brand_consistency_checker/fixtures/simple/: request.example.json
ai_brand_consistency_checker/ops/: deployment.md  env.example  runbook.md
ai_brand_consistency_checker/platform/local/: document_loader.py  llm_adapter.py  report_renderer.py
ai_brand_consistency_checker/schemas/: README.md  audit_log.schema.json  config.schema.json  errors.schema.json  input.schema.json  models.py  output.schema.json
ai_brand_consistency_checker/shared_modules/: README.md  module_index.json
ai_brand_consistency_checker/shared_modules/document_loader/: README.md  contract.md
ai_brand_consistency_checker/shared_modules/evaluation_harness/: README.md  contract.md
ai_brand_consistency_checker/shared_modules/llm_adapter/: README.md  contract.md
infrastructure/local/: llm_adapter.py
(+24 files in other folders)
